[gd_scene load_steps=4 format=3 uid="uid://b4sp86lce8fst"]

[ext_resource type="Script" path="res://Rooms/Rooms.gd" id="1_28826"]
[ext_resource type="TileSet" uid="uid://dme37rpnpm4" path="res://Assets/TileMap/TileMap.tres" id="1_a4fci"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1qeio"]
radius = 34.57

[node name="Room2" type="Node2D"]
script = ExtResource("1_28826")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_a4fci")
format = 2
layer_0/tile_data = PackedInt32Array(0, 851970, 4, 65536, 327682, 16, 131072, 327682, 17, 196608, 327682, 18, 262144, 1572866, 8, 327680, 1572866, 9, 393216, 327682, 21, 458752, 327682, 22, 524288, 327682, 23, 1, 917506, 4, 65537, 393218, 16, 131073, 393218, 17, 196609, 393218, 18, 262145, 983042, 19, 327681, 1048578, 23, 393217, 393218, 21, 458753, 393218, 22, 524289, 393218, 23, 2, 917506, 4, 65538, 458754, 16, 131074, 458754, 17, 196610, 458754, 18, 262146, 458754, 19, 327682, 458754, 20, 393218, 458754, 21, 458754, 458754, 22, 524290, 589826, 3, 3, 917506, 4, 65539, 524290, 16, 131075, 524290, 17, 196611, 524290, 18, 262147, 524290, 19, 327683, 524290, 20, 393219, 524290, 21, 458755, 524290, 22, 524291, 655362, 3, 4, 917506, 4, 65540, 589826, 16, 131076, 589826, 17, 196612, 589826, 18, 262148, 589826, 19, 327684, 589826, 20, 393220, 589826, 21, 458756, 786434, 21, 524292, 786434, 22, 5, 917506, 4, 65541, 655362, 16, 131077, 655362, 17, 196613, 655362, 18, 262149, 655362, 19, 327685, 655362, 20, 393221, 655362, 21, 458757, 851970, 21, 524293, 851970, 22, 6, 917506, 4, 65542, 720898, 16, 131078, 720898, 17, 196614, 720898, 18, 262150, 720898, 19, 327686, 720898, 20, 393222, 720898, 21, 458758, 917506, 21, 524294, 917506, 22, 7, 917506, 4, 65543, 983042, 13, 131079, 983042, 14, 196615, 983042, 15, 262151, 786434, 19, 327687, 786434, 20, 393223, 786434, 21, 458759, 786434, 22, 524295, 917506, 14, 8, 917506, 4, 65544, 1048578, 13, 131080, 1048578, 14, 196616, 1048578, 15, 262152, 851970, 19, 327688, 851970, 20, 393224, 851970, 21, 458760, 851970, 22, 524296, 983042, 14, 9, 917506, 4, 65545, 917506, 16, 131081, 917506, 17, 196617, 917506, 18, 262153, 917506, 19, 327689, 917506, 20, 393225, 917506, 21, 458761, 917506, 22, 524297, 917506, 23, 10, 917506, 4, 65546, 983042, 16, 131082, 983042, 17, 196618, 983042, 18, 262154, 983042, 19, 327690, 983042, 20, 393226, 983042, 21, 458762, 983042, 22, 524298, 983042, 22, 11, 917506, 4, 65547, 1048578, 16, 131083, 1048578, 17, 196619, 1048578, 18, 262155, 1048578, 19, 327691, 1048578, 20, 393227, 1048578, 21, 458763, 1048578, 22, 524299, 1048578, 23, 12, 917506, 4, 65548, 1114114, 16, 131084, 1114114, 17, 196620, 1114114, 18, 262156, 1114114, 19, 327692, 1114114, 20, 393228, 1114114, 21, 458764, 1114114, 22, 524300, 1114114, 23, 13, 917506, 4, 65549, 1179650, 16, 131085, 1179650, 17, 196621, 1179650, 18, 262157, 851970, 9, 327693, 851970, 10, 393229, 851970, 11, 458765, 851970, 12, 524301, 1114114, 13, 14, 917506, 4, 65550, 1245186, 16, 131086, 1245186, 17, 196622, 589826, 7, 262158, 393218, 9, 327694, 393218, 16, 393230, 393218, 17, 458766, 917506, 12, 524302, 1179650, 13, 15, 917506, 4, 65551, 1310722, 16, 131087, 1310722, 17, 196623, 655362, 7, 262159, 1310722, 19, 327695, 1310722, 20, 393231, 1310722, 21, 458767, 393218, 9, 524303, 393218, 10, 16, 1769474, 21, 65552, 327682, 6, 131088, 1376258, 5, 262160, 1376258, 19, 327696, 1114114, 15, 393232, 1114114, 16, 458768, 1114114, 17, 524304, 1114114, 18, 589834, 983042, 23, 655370, 983042, 23, 655371, 1048578, 22, 589828, 786434, 23, 589829, 851970, 23, 589830, 917506, 23, 589824, 65538, 9, 589825, 131074, 9, 655360, 1245186, 1, 655361, 524290, 12, 589826, 393218, 9, 655362, 983042, 17, 589827, 655362, 4, 655363, 655362, 5, 589839, 1835010, 2, 655375, 1835010, 3, 589840, 589826, 16, 655376, 1179650, 14, 17, 917506, 4, 65553, 1507330, 4, 131089, 1507330, 5, 18, 917506, 4, 65554, 1572866, 4, 131090, 720898, 6, 19, 1179650, 4, 65555, 1179650, 5, 131091, 1376258, 17, 196625, 786434, 7, 262161, 655362, 7, 327697, 1179650, 15, 589841, 1507330, 21, 655377, 524290, 17, 589842, 1572866, 21, 655378, 1572866, 22, 524305, 1179650, 18, 393233, 1179650, 16, 458769, 1179650, 17, 589843, 1769474, 23, 655379, 1638402, 22, 196626, 720898, 7, 262162, 720898, 8, 196627, 786434, 7, 262163, 786434, 8, 327698, 1245186, 15, 393234, 1245186, 16, 327699, 1376258, 20, 393235, 1376258, 21, 458770, 1245186, 17, 524306, 1245186, 18, 458771, 1376258, 22, 524307, 1376258, 22, 589838, 1769474, 2, 655374, 1769474, 3, 655364, 1048578, 17, 655365, 1114114, 17, 655366, 1179650, 17, 655367, 1048578, 17, 655368, 917506, 15, 655369, 983042, 15, 589836, 917506, 14, 655372, 1179650, 16, 589837, 983042, 14, 655373, 327682, 21, 589831, 917506, 15, 589832, 917506, 14, 589833, 983042, 14, 196624, 720898, 7, 589835, 983042, 24, 720896, 1507330, 23, 720897, 1572866, 23, 720898, 1638402, 23, 720899, 1507330, 23, 720900, 1572866, 23, 720901, 1638402, 23, 720902, 1507330, 23, 720903, 1572866, 23, 720904, 1638402, 23, 720905, 917506, 12, 720906, 983042, 24, 720907, 1048578, 24, 720908, 1114114, 12, 720909, 65538, 9, 720910, 1638402, 23, 720911, 1507330, 23, 720912, 1572866, 23, 720913, 1638402, 23, 720914, 1507330, 23, 720915, 1572866, 23)
layer_1/name = ""
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array()

[node name="Door1" type="Area2D" parent="."]
position = Vector2(272, 286)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door1"]
position = Vector2(320, 48)
shape = SubResource("CircleShape2D_1qeio")

[node name="Door2" type="Area2D" parent="."]
position = Vector2(58, -52)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door2"]
position = Vector2(574, 180)
shape = SubResource("CircleShape2D_1qeio")

[node name="Door3" type="Area2D" parent="."]
position = Vector2(34, 59)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door3"]
position = Vector2(320, 312)
shape = SubResource("CircleShape2D_1qeio")

[node name="Door4" type="Area2D" parent="."]
position = Vector2(-56, -22)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door4"]
position = Vector2(66, 180)
shape = SubResource("CircleShape2D_1qeio")
